Add Semester & UniquePlanList JUnit testing